src/z80asm/z80asm2/t/40-syntax/expected/cu_nop_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/cu_nop_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/cu_nop_01.asm...
t/40-syntax/input/cu_nop_01.asm:1:8: error: Unexpected token: "x"
    cu.nop x 
           ^
Program
    OpcodeStmt
        Location: t/40-syntax/input/cu_nop_01.asm:2:3
        Address: 0
        Bytes: 0 0
        Patches:
            Patch
                Offset: 0, Size: 2
                Type: BigEndian
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 0
